--- a/index.html
+++ b/index.html
@@ -248,22 +248,21 @@
 
                 <div class="section-title">
                     <h2>Resume</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-                        quidem hic quas.</p>
+                    <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
+                        quidem hic quas.</p>-->
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <h3 class="resume-title">Sumary</h3>
+                        <!--<h3 class="resume-title">Summary</h3>
                         <div class="resume-item pb-0">
                             <h4>Brandon Johnson</h4>
                             <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
                             <ul>
-                                <li>Portland par 127,Orlando, FL</li>
-                                <li>(123) 456-7891</li>
+                                <li>(6</li>
                                 <li>alice.barkley@example.com</li>
                             </ul>
-                        </div>
+                        </div>-->
 
                         <h3 class="resume-title">Education</h3>
                         <!--<div class="resume-item">
@@ -275,21 +274,27 @@
                         <div class="resume-item">
                             <h4>Bachelor of Sciences in Industrial Engineering</h4>
                             <h5>2018 - 2022</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                            <p><em>Purdue University - West Lafayette, IN</em></p>
+                            <p>Studying Industrial Engineering with a minor in Computer Science and a focus on Optimization Algorithms and Machine Learning</p>
+                        </div>
+                        <h3 class="resume-title">Research and Campus Involvement</h3>
+                        <div class="resume-item">
+                            <h4>Purdue Recruitment and Selection Lab</h4>
+                            <h5>2020 - Present</h5>
+                            <p><em>Purdue University - West Lafayette, IN</em></p>
+                            <p>Studying Industrial Engineering with a minor in Computer Science and a focus on Optimization Algorithms and Machine Learning</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Global Supply Chain Intern</h4>
+                            <h5>2020, 2021</h5>
+                            <p><em>Benton Harbor, MI</em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                <li>Led requirement gathering sessions with cross-functional teams of process owners for Lodestar – the new manufacturing execution system responsible for managing the production of over 25 million units a year</li>
+                                <li>Developed and implemented real-time dashboards displaying scheduling and yield information for work center team leaders across all 9 Whirlpool plants in America.</li>
+                                <li>Communicated with 18 different commodity groups to develop cost forecasting predictive models, diving into various tools like SAP Business Warehouse and Google DataStudio</li>
                             </ul>
                         </div>
                         <div class="resume-item">
