--- a/index.html
+++ b/index.html
@@ -281,13 +281,17 @@
                             <h4>Purdue Recruitment and Selection Lab</h4>
                             <h5>2020 - Present</h5>
                             <p><em>Purdue University - West Lafayette, IN</em></p>
-                            <p>Studying Industrial Engineering with a minor in Computer Science and a focus on Optimization Algorithms and Machine Learning</p>
+                            <ul>
+                                <li>Authored a book chapter on the current applications of measurement technology, machine learning, and artificial intelligence on evaluating psychological constructs in Asia. Primarily focused on Focusing on facial recognition
+                                    technology, social media usage, and data protection legislation.</li>
+                                <li>Developing a review of best practices for increasing diversity during recruitment</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
-                            <h4>Global Supply Chain Intern</h4>
+                            <h4>Whirlpool Corporation - Global Supply Chain Intern</h4>
                             <h5>2020, 2021</h5>
                             <p><em>Benton Harbor, MI</em></p>
                             <ul>
@@ -297,14 +301,11 @@
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <h4>Equifax - Software Engineering Intern</h4>
+                            <h5>2019</h5>
+                            <p><em>Alpharetta, GA</em></p>
                             <ul>
-                                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                <li>Collaborated on an Agile SCRUM Team to develop applications leveraging Java Spring Boot and AWS cloud computing capabilities like Lambda, DynamoDB, and EC2 infrastructure</li>
                             </ul>
                         </div>
                     </div>
@@ -565,7 +566,7 @@
         </section>
         <!-- End Services Section -->
 
-        <!-- ======= Testimonials Section ======= -->
+        <!-- ======= Testimonials Section =======
         <section id="testimonials" class="testimonials section-bg">
             <div class="container" data-aos="fade-up">
 
@@ -588,7 +589,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -602,7 +602,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -616,7 +615,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -630,7 +628,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -644,7 +641,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
 
                     </div>
                     <div class="swiper-pagination"></div>
@@ -652,9 +648,9 @@
 
             </div>
         </section>
-        <!-- End Testimonials Section -->
+        End Testimonials Section -->
 
-        <!-- ======= Contact Section ======= -->
+        <!-- ======= Contact Section ======= 
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
 
@@ -713,7 +709,7 @@
 
             </div>
         </section>
-        <!-- End Contact Section -->
+         End Contact Section -->
 
     </main>
     <!-- End #main -->
