--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 		                <h1 class="name">Nakul Upadhya</h1>
 		                <h2 class="desc">Data Scientist</h2>   
 		                <ul class="social list-inline">
-		                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/nakulupadhya/"><i class="fab fa-linkedin-in"></i></a></li>
-		                    <li class="list-inline-item"><a href="https://github.com/upadhyan"><i class="fab fa-github-alt"></i></a></li>    
-		                    <li class="list-inline-item"><a href="https://stackoverflow.com/users/11397075/nakul-upadhya"><i class="fab fa-stack-overflow"></i></a></li>
-                            <li class="list-inline-item"><a href="https://open.spotify.com/user/tehsupahboss?si=3570a098a0bf4208&nd=1"><i class="fab fa-spotify"></i></a></li>      
-		                    <li class="list-inline-item last-item"><a href="https://www.instagram.com/upadhyanakul/"><i class="fab fa-instagram"></i></a></li>                
+		                    <li class="list-inline-item"><a title = "LinkedIn" href="https://www.linkedin.com/in/nakulupadhya/"><i class="fab fa-linkedin-in"></i></a></li>
+		                    <li class="list-inline-item"><a title = "GitHub" href="https://github.com/upadhyan"><i class="fab fa-github-alt"></i></a></li>    
+		                    <li class="list-inline-item"><a title = "Stack Overflow" href="https://stackoverflow.com/users/11397075/nakul-upadhya"><i class="fab fa-stack-overflow"></i></a></li>
+                            <li class="list-inline-item"><a title = "Spotify" href="https://open.spotify.com/user/tehsupahboss?si=3570a098a0bf4208&nd=1"><i class="fab fa-spotify"></i></a></li>      
+		                    <li class="list-inline-item last-item"><a title = "Instagram" href="https://www.instagram.com/upadhyanakul/"><i class="fab fa-instagram"></i></a></li>
+                            <li class="list-inline-item"><a title = "Resume" href="https://drive.google.com/file/d/1svH08mS-7umkwyMD9g0-4iL0Wci35kEI/view?usp=sharing"><i class="fa-solid fa-file"></i></a></li>            
 		                </ul> 
 		            </div><!--//profile-->
 			    </div><!--//col-->
@@ -69,13 +70,13 @@
 		            <ul class = "items list-inline">
                         <li class = "list-inline-item item selected"><span>Home</span></li>
                         <li class = "list-inline-item item"><span>&#8226;</span></li>
-                        <li class = "list-inline-item item"><a href = "resume/index.html">Resume</a></li>
-                        <li class = "list-inline-item item"><span>&#8226;</span></li>
-                        <li class = "list-inline-item item"><a href = "projects/index.html">Projects</a></li>
-                        <li class = "list-inline-item item"><span>&#8226;</span></li>
+                        <!--<li class = "list-inline-item item"><a href = "projects/index.html">Projects</a></li>
+                        <li class = "list-inline-item item"><span>&#8226;</span></li>-->
+                        <li class = "list-inline-item item"><a href = "blog/index.html">Tech Blog</a></li>
+                        <!--<li class = "list-inline-item item"><span>&#8226;</span></li>
                         <li class = "list-inline-item item"><a href = "coffee/index.html">Coffee Stuff</a></li>
-                        <li class = "list-inline-item item"><span>&#8226;</span></li>
-                        <li class = "list-inline-item item"><a href = "cooking/index.html">Cooking</a></li>
+                        <li class = "list-inline-item item"><span>&#8226;</span></li> 
+                        <li class = "list-inline-item item"><a href = "cooking/index.html">Cooking</a></li>-->
                     </ul>
 			    </div><!--//col-->
 	        </div><!--//row-->    
