--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li class = "list-inline-item item"><span>&#8226;</span></li>
                         <!--<li class = "list-inline-item item"><a href = "projects/index.html">Projects</a></li>
                         <li class = "list-inline-item item"><span>&#8226;</span></li>-->
-                        <li class = "list-inline-item item"><a href = "blog/index.html">Tech Blog</a></li>
+                        <li class = "list-inline-item item"><a href = "https://medium.com/@upadhyan">Blog</a></li>
                         <!--<li class = "list-inline-item item"><span>&#8226;</span></li>
                         <li class = "list-inline-item item"><a href = "coffee/index.html">Coffee Stuff</a></li>
                         <li class = "list-inline-item item"><span>&#8226;</span></li> 
