--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <p>
-                                Hi! My name is Nakul and I'm a Masters Student at the University of Toronto studying Operations Research and Machine Learning.
+                                Hi! My name is Nakul and I'm a PhD Student at the University of Toronto researching Deep Learning and Optimization, with a specific focus in Interpretable Sequence Models. 
                                 Prior to that, I was an undergraduate student at Purdue University (Boiler Up!) studying Industrial Engineering with a minor in Computer Science.
                                 My academic interests include Optimization and its interactions with Machine Learning. 
-                                I also like working with Natural Language Processing and its applications on structuring un-structured data. 
                             </p>
                             <p>
                                 Some of my personal interests include specialty coffee, cooking, and strategy video games. 
@@ -135,7 +134,7 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> MASc Operations Research & Information Engineering</h3>
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> PhD Operations Research & Information Engineering</h3>
                                 <h4 class="university">University of Toronto <span class="year">(2022-Current)</span></h4>
                             </div><!--//item-->
                             <div class="item">
